Demos/MSVCPP/Shared_MSVCPP/Sepia2_Lib.h



  // ---  library functions  --------------------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_LIB_DecodeError               (int iErrCode, char* cErrorString);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_LIB_GetVersion                (char* cLibVersion);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_LIB_GetLibUSBVersion          (char* cLibUSBVersion);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_LIB_IsRunningOnWine           (unsigned char* pbIsRunningOnWine);



  // ---  USB functions  ------------------------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_USB_OpenDevice                (int iDevIdx,     char* cProductModel,     char* cSerialNumber);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_USB_OpenGetSerNumAndClose     (int iDevIdx,     char* cProductModel,     char* cSerialNumber);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_USB_GetStrDescriptor          (int iDevIdx,     char* cDescriptor);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_USB_GetStrDescrByIdx          (int iDevIdx,     int   iDescrIdx,         char* cDescriptor);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_USB_IsOpenDevice              (int iDevIdx,     unsigned char* pbIsOpenDevice);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_USB_CloseDevice               (int iDevIdx);



  // ---  firmware functions  -------------------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_FWR_DecodeErrPhaseName        (int iErrPhase,   char* cErrorPhase);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_FWR_GetVersion                (int iDevIdx,     char* cFWVersion);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_FWR_GetLastError              (int iDevIdx,     int*  piErrCode,       int*  piPhase,       int* piLocation,  int* piSlot, char* cCondition);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_FWR_GetWorkingMode            (int iDevIdx,     int*  piMode);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_FWR_SetWorkingMode            (int iDevIdx,     int   iMode);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_FWR_RollBackToPermanentValues (int iDevIdx);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_FWR_StoreAsPermanentValues    (int iDevIdx);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_FWR_GetModuleMap              (int iDevIdx,     int   iPerformRestart, int*  piModuleCount);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_FWR_GetModuleInfoByMapIdx     (int iDevIdx,     int   iMapIdx,         int*  piSlotId,      unsigned char* pbIsPrimary, unsigned char* pbIsBackPlane,  unsigned char* pbHasUptimeCounter);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_FWR_GetUptimeInfoByMapIdx     (int iDevIdx,     int   iMapIdx,         unsigned long* pulMainPowerUp, unsigned long* pulActivePowerUp, unsigned long* pulScaledPowerUp);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_FWR_CreateSupportRequestText  (int iDevIdx,     char* cPreamble,       char* cCallingSW, int iOptions, int iBufferLen, char* cBuffer);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_FWR_FreeModuleMap             (int iDevIdx);



  // ---  common module functions  --------------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_COM_DecodeModuleType          (int iModuleType, char* cModulType);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_COM_DecodeModuleTypeAbbr      (int iModuleType, char* cModulTypeAbbr);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_COM_GetModuleType             (int iDevIdx,     int   iSlotId,  int   iGetPrimary,   int* piModuleType);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_COM_HasSecondaryModule        (int iDevIdx,     int   iSlotId,  int*  piHasSecondary);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_COM_GetSerialNumber           (int iDevIdx,     int   iSlotId,  int   iGetPrimary,   char* cSerialNumber);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_COM_GetSupplementaryInfos     (int iDevIdx,     int   iSlotId,  int   iGetPrimary,   char* cLabel, char* cReleaseDate, char* cRevision, char* cHdrMemo);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_COM_GetPresetInfo             (int iDevIdx,     int   iSlotId,  int   iGetPrimary,   int   iPresetNr,  unsigned char* pbIsSet, char* cPresetMemo);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_COM_RecallPreset              (int iDevIdx,     int   iSlotId,  int   iGetPrimary,   int   iPresetNr);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_COM_SaveAsPreset              (int iDevIdx,     int   iSlotId,  int   iSetPrimary,   int   iPresetNr,  char* cPresetMemo);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_COM_IsWritableModule          (int iDevIdx,     int   iSlotId,  int   iGetPrimary,   unsigned char* pbIsWritable);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_COM_UpdateModuleData          (int iDevIdx,     int   iSlotId,  int   iSetPrimary,   char* pcDCLFileName);



  // ---  SCM 828 functions  --------------------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SCM_GetPowerAndLaserLEDS      (int iDevIdx,     int   iSlotId,  unsigned char* pbPowerLED,  unsigned char* pbLaserActiveLED);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SCM_GetLaserLocked            (int iDevIdx,     int   iSlotId,  unsigned char* pbLocked);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SCM_GetLaserSoftLock          (int iDevIdx,     int   iSlotId,  unsigned char* pbSoftLocked);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SCM_SetLaserSoftLock          (int iDevIdx,     int   iSlotId,  unsigned char  bSoftLocked);



  // ---  SLM 828 functions  --------------------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SLM_DecodeFreqTrigMode        (int iFreq,       char* cFreqTrigMode);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SLM_DecodeHeadType            (int iHeadType,   char* cHeadType);
  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SLM_GetIntensityFineStep      (int iDevIdx,     int   iSlotId,  unsigned short* pwIntensity);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SLM_SetIntensityFineStep      (int iDevIdx,     int   iSlotId,  unsigned short  wIntensity);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SLM_GetPulseParameters        (int iDevIdx,     int   iSlotId,  int*  piFreq, unsigned char* pbPulseMode,  int* piHeadType);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SLM_SetPulseParameters        (int iDevIdx,     int   iSlotId,  int   iFreq,  unsigned char  bPulseMode);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWM_GetUIConstants            (int iDevIdx,     int   iSlotId,  unsigned char* bTBNdxCount, unsigned short* wMaxAmplitude, unsigned short* wMaxSlewRate, unsigned short* wExpRampEffect, unsigned short* wMinUserValue, unsigned short* wMaxUserValue, unsigned short* wUserResolution);