Demos/MSVCSharp/Shared_MSVCSharp/Sepia2_Lib.cs

using System.Text;
using System.Runtime.InteropServices;

namespace PQ.Sepia2
{
  public static partial class Sepia2_Lib
  {

    /*
     * The following part is from 'SEPIA2_Lib.h'
    /**/
    #region Part is from 'SEPIA2_Lib.h'

    //-----------------------------------------------------------------------------
    //
    //      SEPIA2_Lib.h
    //
    //-----------------------------------------------------------------------------
    //
    //  functions exported by SEPIA2_Lib
    //
    //-----------------------------------------------------------------------------
    //  HISTORY:
    //
    //  apo  22.12.05   release of the library interface
    //
    //  apo  12.02.07   introduced SML Multilaser Module (V1.0.2.0)
    //
    //  apo  02.12.09   introduced SWM Pulsar Waveform Module (V1.0.2.1)
    //
    //  apo  04.01.10   introduced function SEPIA2_SWM_GetUIConstants
    //
    //  apo  14.08.12   re-introduced all strictly internal functions
    //                    encapsulated by compiler switch  __STRICTLY_PQ_INTERNAL__
    //
    //  apo  14.08.12   introduced Solea SWS functions (solea wavelength selector)
    //
    //  apo  04.09.12   introduced Solea SSM functions (solea seed module)
    //
    //  apo  11.04.13   introduced COM functions for two presets
    //
    //  apo  23.04.13   introduced Solea SPM functions (solea pump control)
    //
    //  apo  07.05.13   introduced LMP module functions for PQ internal laser test site
    //
    //  apo  22.05.13   introduced new SLM functions with intensity on permille domain
    //                  primarily intended for laser test site (LMP), but released
    //                  as a common feature;
    //                  thus old SLM functions on percentage domain are deprecated
    //
    //  apo  31.05.13   introduced new SWS function ReInitMotor
    //
    //  apo  04.06.13   introduced new SWS function UpdateFirmware
    //
    //  apo  05.06.13   SWS command code 0x04 was withdrawn:
    //                    get status is now integrated with get error -> GetStatusError
    //
    //  apo  06.11.13   introduced new FWR function GetModuleInfoByMapIdx
    //
    //  apo  15.07.14   introduced new SOMD feature:
    //                    Base oscillator predivider is now 16bit
    //
    //  apo  16.07.14   introduced new SOM/SOMD functions Get/Set AUXIOSequencerCtrl
    //
    //  apo  24.04.15   introduced new SOMD function DecodeModuleState
    //
    //  apo  17.09.15   fixed some type incompatibilities with the MatLab environment
    //                    This is not officially supported, not officially released!
    //
    //  apo  01.10.15   removed some superfluous SPM info functions from API
    //
    //-----------------------------------------------------------------------------
    //

    public const string SEPIA2_LIB = "Sepia2_Lib";


    // ---  library functions  --------------------------------------------------

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_LIB_DecodeError(int iErrCode, StringBuilder cErrorString);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_LIB_GetVersion(StringBuilder cLibVersion);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_LIB_GetLibUSBVersion(StringBuilder cLibUSBVersion);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_LIB_IsRunningOnWine(out byte pbIsRunningOnWine);


    // ---  USB functions  ------------------------------------------------------

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_USB_OpenDevice(int iDevIdx, StringBuilder cProductModel, StringBuilder cSerialNumber);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_USB_OpenGetSerNumAndClose(int iDevIdx, StringBuilder cProductModel, StringBuilder cSerialNumber);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_USB_GetStrDescriptor(int iDevIdx, StringBuilder cDescriptor);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_USB_GetStrDescrByIdx(int iDevIdx, int iDescrIdx, StringBuilder cDescriptor);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_USB_IsOpenDevice(int iDevIdx, out byte pbIsOpenDevice);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_USB_CloseDevice(int iDevIdx);


    // ---  firmware functions  -------------------------------------------------

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_FWR_DecodeErrPhaseName(int iErrPhase, StringBuilder cErrorPhase);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_FWR_GetVersion(int iDevIdx, StringBuilder cFWVersion);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_FWR_GetLastError(int iDevIdx, out int piErrCode, out int piPhase, out int piLocation, out int piSlot, StringBuilder cCondition);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_FWR_GetWorkingMode(int iDevIdx, out int piMode);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_FWR_SetWorkingMode(int iDevIdx, int iMode);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_FWR_RollBackToPermanentValues(int iDevIdx);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_FWR_StoreAsPermanentValues(int iDevIdx);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_FWR_GetModuleMap(int iDevIdx, int iPerformRestart, out int piModuleCount);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_FWR_GetModuleInfoByMapIdx(int iDevIdx, int iMapIdx, out int piSlotId, out byte pbIsPrimary, out byte pbIsBackPlane, out byte pbHasUptimeCounter);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_FWR_GetUptimeInfoByMapIdx(int iDevIdx, int iMapIdx, out uint pulMainPowerUp, out uint pulActivePowerUp, out uint pulScaledPowerUp);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_FWR_CreateSupportRequestText(int iDevIdx, StringBuilder cPreamble, StringBuilder cCallingSW, int iOptions, int iBufferLen, StringBuilder cBuffer);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_FWR_FreeModuleMap(int iDevIdx);


    // ---  common module functions  --------------------------------------------

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_COM_DecodeModuleType(int iModuleType, StringBuilder cModulType);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_COM_DecodeModuleTypeAbbr(int iModuleType, StringBuilder cModulTypeAbbr);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_COM_GetModuleType(int iDevIdx, int iSlotId, int iGetPrimary, out int piModuleType);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_COM_HasSecondaryModule(int iDevIdx, int iSlotId, out int piHasSecondary);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_COM_GetSerialNumber(int iDevIdx, int iSlotId, int iGetPrimary, StringBuilder cSerialNumber);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_COM_GetSupplementaryInfos(int iDevIdx, int iSlotId, int iGetPrimary, StringBuilder cLabel, StringBuilder cReleaseDate, StringBuilder cRevision, StringBuilder cHdrMemo);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_COM_GetPresetInfo(int iDevIdx, int iSlotId, int iGetPrimary, int iPresetNr, out byte pbIsSet, StringBuilder cPresetMemo);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_COM_RecallPreset(int iDevIdx, int iSlotId, int iGetPrimary, int iPresetNr);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_COM_SaveAsPreset(int iDevIdx, int iSlotId, int iSetPrimary, int iPresetNr, StringBuilder cPresetMemo);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_COM_IsWritableModule(int iDevIdx, int iSlotId, int iGetPrimary, out byte pbIsWritable);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_COM_UpdateModuleData(int iDevIdx, int iSlotId, int iSetPrimary, StringBuilder pcDCLFileName);


    // ---  SCM 828 functions  --------------------------------------------------

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SCM_GetPowerAndLaserLEDS(int iDevIdx, int iSlotId, out byte pbPowerLED, out byte pbLaserActiveLED);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SCM_GetLaserLocked(int iDevIdx, int iSlotId, out byte pbLocked);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SCM_GetLaserSoftLock(int iDevIdx, int iSlotId, out byte pbSoftLocked);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SCM_SetLaserSoftLock(int iDevIdx, int iSlotId, byte bSoftLocked);


    // ---  SLM 828 functions  --------------------------------------------------

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SLM_DecodeFreqTrigMode(int iFreq, StringBuilder cFreqTrigMode);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SLM_DecodeHeadType(int iHeadType, StringBuilder cHeadType);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SLM_GetIntensityFineStep(int iDevIdx, int iSlotId, out ushort pwIntensity);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SLM_SetIntensityFineStep(int iDevIdx, int iSlotId, ushort wIntensity);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SLM_GetPulseParameters(int iDevIdx, int iSlotId, out int piFreq, out byte pbPulseMode, out int piHeadType);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SLM_SetPulseParameters(int iDevIdx, int iSlotId, int iFreq, byte bPulseMode);


    // ---  SML 828 functions  --------------------------------------------------
